# ScaleAnalyzer

./: README.md  ScaleAnalyzer.kv  carnatic.py  fokker_modes.py  gchords_experiment.tex  gui.py  main.py  pyproject.toml  scale_analyses.py  scales.py
Pictogram/com/: calnrich
scala/: 12_from_24__Aug__1.scl  12_from_24__Aug__2.scl  12_from_24__Aug__5.scl  12_from_24__Aug__9.scl  12_from_24__Dim__10.scl  12_from_24__Dim__11.scl  12_from_24__Dim__12.scl  12_from_24__Dim__13.scl  12_from_24__Dim__14.scl  12_from_24__Dim__15.scl  12_from_24__Dim__16.scl  12_from_24__Dim__17.scl  12_from_24__Dim__18.scl  12_from_24__Dim__19.scl  12_from_24__Dim__20.scl  12_from_24__Dim__21.scl  12_from_24__Dim__22.scl  12_from_24__Dim__23.scl  12_from_24__Dim__24.scl  12_from_24__Dim__25.scl  12_from_24__Dim__26.scl  12_from_24__Dim__27.scl  12_from_24__Dim__28.scl  12_from_24__Dim__29.scl  12_from_24__Dim__30.scl  12_from_24__Dim__31.scl  12_from_24__Dim__32.scl  12_from_24__Dim__33.scl  12_from_24__Dim__34.scl  12_from_24__Dim__35.scl  12_from_24__Dim__36.scl  12_from_24__Dim__37.scl  12_from_24__Dim__38.scl  12_from_24__Dim__39.scl  12_from_24__Dim__40.scl  12_from_24__Dim__41.scl  12_from_24__Dim__42.scl  12_from_24__Dim__43.scl  12_from_24__Dim__44.scl  12_from_24__Dim__45.scl  (+82 more)
scala/10_from_22EDO/: 10_from_22__Alternate Pentachordal Major.scl  10_from_22__Alternate Pentachordal Minor.scl  10_from_22__Dynamic Symmetrical Major.scl  10_from_22__Dynamic Symmetrical Minor.scl  10_from_22__Standard Pentachordal Major.scl  10_from_22__Standard Pentachordal Minor.scl  (+2 more)
(+453 files in other folders)
