[tool.poetry]
name = "repl_python3_ScaleAnalyzer"
version = "0.1.0"
description = ""
authors = ["richcochrane <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
kivymd = "^0.104.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
